<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#C8B6B6"
    tools:context=".SignupFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/custom2"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_weight="1">
    <TextView
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/create_an_account"
        android:textSize="24sp"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"/>
    <TextView
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="16sp"
        android:textColor="#000000"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"/>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp">
        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:hint="@string/john_doe"
            android:inputType="text"
            android:layout_weight="1"/>
        <ImageView
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_baseline_person_24"/>
    </LinearLayout>
    <TextView
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/Email"
        android:textSize="16sp"
        android:textColor="#000000"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"/>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp">
        <EditText
            android:id="@+id/mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:hint="@string/johndoe_gmail_com"
            android:inputType="textEmailAddress"
            android:layout_weight="1"/>
        <ImageView
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_baseline_mail_24"/>
    </LinearLayout>
    <TextView
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/contact_no"
        android:textSize="16sp"
        android:textColor="#000000"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"/>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp">
        <EditText
            android:id="@+id/contactno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:maxLength="10"
            android:hint="9xxxxxxxxx"
            android:inputType="number"
            android:layout_weight="1"/>
        <ImageView
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_baseline_local_phone_24"/>
    </LinearLayout>
    <TextView
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textSize="16sp"
        android:textColor="#000000"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"/>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp">
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:hint="*********"
            android:inputType="textPassword"
            android:layout_weight="1"/>
        <ImageView
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_baseline_lock_24"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp">
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/i_agree_with_terms_conditions"
            android:textColor="#000000"
            android:layout_marginStart="10dp"
            android:textSize="16sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/terms_conditions"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:layout_marginStart="4dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account"
            android:textColor="#000000"
            android:layout_marginStart="10dp"
            android:textSize="16sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:layout_marginStart="4dp"/>
    </LinearLayout>
    </LinearLayout>
    <Button
        android:background="@drawable/custom"
        android:text="@string/register"
        android:id="@+id/buttonreg"
        android:textSize="17sp"
        android:textColor="@color/colorAccent"
        android:layout_width="match_parent"
        android:layout_height="60dp"/>
</LinearLayout>