<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#C8B6B6"
    tools:context=".loginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/custom2"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_weight="1">
    <TextView
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="SignIn in to your Account"
        android:textSize="24sp"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>
    <TextView
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/Email"
        android:textSize="16sp"
        android:textColor="#000000"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">
        <EditText
            android:id="@+id/maillog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:hint="@string/johndoe_gmail_com"
            android:inputType="textEmailAddress"
            android:layout_weight="1"/>
        <ImageView
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_baseline_mail_24"/>
    </LinearLayout>
    <TextView
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textSize="16sp"
        android:textColor="#000000"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">
        <EditText
            android:id="@+id/passwordlog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:hint="*********"
            android:inputType="textPassword"
            android:layout_weight="1"/>
        <ImageView
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_baseline_lock_24"/>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Forgot Password?"
        android:layout_gravity="right"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_with"
        android:layout_gravity="center"
        android:textColor="#000000"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textSize="16sp"/>
        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:elevation="8dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="50dp"
                    android:src="@drawable/download"
                    android:id="@+id/google"
                    />
                <ImageView
                    android:layout_width="30dp"
                    android:id="@+id/facebook"
                    android:layout_height="30dp"
                    android:src="@drawable/images"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account"
            android:textColor="#000000"
            android:layout_marginStart="10dp"
            android:textSize="16sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_now"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:layout_marginStart="4dp"/>
    </LinearLayout>
    </LinearLayout>
    <Button
        android:background="@drawable/custom"
        android:text="@string/login"
        android:id="@+id/buttonlog"
        android:textSize="17sp"
        android:textColor="@color/colorAccent"
        android:layout_width="match_parent"
        android:layout_height="60dp"/>
</LinearLayout>