<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    app:cardCornerRadius="15dp"
    app:cardBackgroundColor="@color/colorAccent"
    app:cardElevation="5dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:orientation="vertical"
        android:layout_weight="1">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_2_hours_ago"
            android:id="@+id/time"
            android:textSize="12sp"
            android:layout_marginStart="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="BBC NEWS"
            android:textStyle="bold"
            android:textSize="12sp"
            android:id="@+id/source"
            android:layout_marginStart="10dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="10dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apple_admits_slowing_down_of_older_iphones"
        android:textColor="@color/colorfeed"
        android:id="@+id/Title"
        android:textSize="15sp"
        android:layout_marginBottom="10dp"
        android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:text="@string/desp"
            android:textColor="@color/colorfeed"
            android:id="@+id/Description"/>
    </LinearLayout>
    </LinearLayout>
        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:id="@+id/imagecustom"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_baseline_image_24"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>